--- a/interface/机器学习及系统性能.html
+++ b/interface/机器学习及系统性能.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>舆情洞察 - 舆情报告</title>
+    <title>舆情洞察 - 机器学习及系统性能</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,11 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css"
       rel="stylesheet"
     />
-    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -155,12 +155,12 @@
         >
         <a
           href="机器学习及系统性能.html"
-          class="nav-link text-gray-700 hover:text-primary px-4 py-2 whitespace-nowrap"
+          class="nav-link active bg-primary text-white px-4 py-2 rounded-button !rounded-button whitespace-nowrap"
           >机器学习及系统性能</a
         >
         <a
           href="舆情报告.html"
-          class="nav-link active bg-primary text-white px-4 py-2 rounded-button !rounded-button whitespace-nowrap"
+          class="nav-link text-gray-700 hover:text-primary px-4 py-2 whitespace-nowrap"
           >舆情报告</a
         >
       </div>
