--- a/interface/主页.html
+++ b/interface/主页.html
@@ -261,33 +261,33 @@
             <h2 class="text-gray-800 font-bold mb-4 sidebar-animation">舆情工具</h2>
 
             <div class="space-y-4">
-                <div class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.1s">
+                <a href="情感分析.html" class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.1s">
                     <div class="w-10 h-10 flex items-center justify-center bg-blue-100 rounded-full text-blue-600 flex-shrink-0">
                         <i class="ri-emotion-line ri-lg"></i>
                     </div>
                     <span class="tool-text ml-3 text-gray-800 font-medium">情感分析</span>
-                </div>
+                </a>
 
-                <div class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.2s">
+                <a href="性别分析.html" class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.2s">
                     <div class="w-10 h-10 flex items-center justify-center bg-green-100 rounded-full text-green-600 flex-shrink-0">
                         <i class="ri-user-line ri-lg"></i>
                     </div>
                     <span class="tool-text ml-3 text-gray-800 font-medium">性别分析</span>
-                </div>
+                </a>
 
-                <div class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.3s">
+                <a href="事件分析.html" class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.3s">
                     <div class="w-10 h-10 flex items-center justify-center bg-orange-100 rounded-full text-orange-600 flex-shrink-0">
                         <i class="ri-lightbulb-line ri-lg"></i>
                     </div>
                     <span class="tool-text ml-3 text-gray-800 font-medium">事件分析</span>
-                </div>
+                </a>
 
-                <div class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.4s">
+                <a href="地域分析.html" class="tool-card bg-white rounded-lg shadow-md p-4 flex items-center cursor-pointer hover:shadow-lg transition duration-300 ease-in-out" style="animation-delay: 0.4s">
                     <div class="w-10 h-10 flex items-center justify-center bg-purple-100 rounded-full text-purple-600 flex-shrink-0">
                         <i class="ri-map-pin-line ri-lg"></i>
                     </div>
                     <span class="tool-text ml-3 text-gray-800 font-medium">地域分析</span>
-                </div>
+                </a>
             </div>
 
             <h2 class="text-gray-800 font-bold mt-8 mb-4 sidebar-animation">快捷操作</h2>
